--- a/src/EasyRoom/AppBundle/Resources/views/easyRoomTemplateParent.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/easyRoomTemplateParent.html.twig
@@ -9,16 +9,33 @@ and open the template in the editor.
         <title>{EasyRoom</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
+        <!--Import Google Icon Font-->
+        <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <!--Import materialize.css-->
+        <link type="text/css" rel="stylesheet" href="{{ asset('bundles/easyroomapp/css/materialize.css') }}"  media="screen,projection"/>
+      </head>
     <body>
         <header>
+          <nav>
+            <div class="nav-wrapper">
+              <a href="#" class="brand-logo">Logo</a>
+              <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="sass.html">Sass</a></li>
+                <li><a href="badges.html">Components</a></li>
+                <li><a href="collapsible.html">JavaScript</a></li>
+              </ul>
+            </div>
+          </nav>
         </header>
 
         <main>
-            
+
         </main>
 
         <footer>
         </footer>
+        <!--Import jQuery before materialize.js-->
+        <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script type="text/javascript" src="{{ asset('bundles/easyroomapp/js/materialize.js') }}"></script>
     </body>
 </html>
