--- a/src/EasyRoom/AppBundle/Resources/views/easyRoomTemplateParent.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/easyRoomTemplateParent.html.twig
@@ -29,7 +29,8 @@ and open the template in the editor.
         </header>
 
         <main>
-
+          {% block main %}
+          {% endblock %}
         </main>
 
         <footer>
