Modifications des noms sur le header

--- a/src/EasyRoom/AppBundle/Resources/views/easyRoomTemplateParent.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/easyRoomTemplateParent.html.twig
@@ -20,9 +20,9 @@ and open the template in the editor.
             <div class="nav-wrapper">
               <a href="#" class="brand-logo">Logo</a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="sass.html">Sass</a></li>
-                <li><a href="badges.html">Components</a></li>
-                <li><a href="collapsible.html">JavaScript</a></li>
+                <li><a href="Accueil.html">Accueil</a></li>
+                <li><a href="Salles.html">Salles</a></li>
+                <li><a href="Mes réservations.html">Mes réservations</a></li>
               </ul>
             </div>
           </nav>
