--- a/src/EasyRoom/AppBundle/Resources/public/css/Accueil/accueil_style.css
+++ b/src/EasyRoom/AppBundle/Resources/public/css/Accueil/accueil_style.css
@@ -41,8 +41,8 @@ and open the template in the editor.
  }
  /* invalid color */
  .input-field .invalid {
-   border-bottom: 1px solid #rgb(171, 39, 3);
-   box-shadow: 0 1px 0 0 #rgb(171, 39, 3);
+   border-bottom: 1px solid rgb(171, 39, 3);
+   box-shadow: 0 1px 0 0 rgb(171, 39, 3);
  }
  /* icon prefix focus color */
  .input-field .prefix.active {
