--- a/src/EasyRoom/AppBundle/Resources/views/Accueil/accueil.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Accueil/accueil.html.twig
@@ -76,7 +76,9 @@
         </div>
     </section>
     <section>
-
+      <div class="row">
+      {% include 'EasyRoomAppBundle:Reservation:reservationCarte.html.twig' %}
+      </div>
     </section>
     <section>
 
