Maj controlleurs + routing

--- a/src/EasyRoom/AppBundle/Resources/views/Accueil/accueil.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Accueil/accueil.html.twig
@@ -1,4 +1,4 @@
-{% extends "EasyRoomAppBundle::easyRoomTemplateParent.html.twig" %}
+{% extends "EasyRoomAppBundle::template_parent.html.twig" %}
 
 {# Contenu du block stylesheets #}
 {% block stylesheets %}
