--- a/src/EasyRoom/AppBundle/Resources/views/Accueil/accueil.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Accueil/accueil.html.twig
@@ -77,7 +77,7 @@
     </section>
     <section>
       <div class="row">
-      {% include 'EasyRoomAppBundle:Reservation:reservationCarte.html.twig' %}
+      {% include 'EasyRoomAppBundle:Reservation:carte.html.twig' %}
       </div>
     </section>
     <section>
