--- a/src/EasyRoom/AppBundle/Resources/views/Login/index.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Login/index.html.twig
@@ -1,1 +1,23 @@
-Page : index login
+{% extends "EasyRoomAppBundle::template_parent.html.twig" %}
+
+{% block main %}
+    <div class="row">
+        <form class="col s12">
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">account_circle</i>
+                    <input id="icon_prefix" type="text" class="validate">
+                    <label for="icon_prefix">Adresse mail</label>
+                </div>
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">lock</i>
+                    <input id="icon_lock" type="password" class="validate">
+                    <label for="icon_lock">Mot de passe</label>
+                </div>
+                <input type="submit" value="SE CONNECTER">
+                <a href="#" class="forgot">mot de passe oublié ?</a>
+            </div>
+        </form>
+    </div>
+
+{% endblock %}
