Fix fautes français

--- a/src/EasyRoom/AppBundle/Resources/views/nomvue.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/nomvue.html.twig
@@ -2,25 +2,25 @@
 
 {# Contenu du block stylesheets #}
 {% block stylesheets %}
-    {# (Contenu optionnel) ici doit être ajouter seulement des balises <link> pour faire appel à des fichiers css spécifiques à la vue #}
+    {# (Contenu optionnel) ici doit être ajouté seulement des balises <link> pour faire appel à des fichiers css spécifiques à la vue #}
 {% endblock %}
 
 {# Contenu du block navbar_profil #}
 {% block navbar_profil %}
-    {# (Contenu optionnel) ici doit être ajouter le contenu du menu déroulant pour l'onglet profil du menu #}
+    {# (Contenu optionnel) ici doit être ajoutéle contenu du menu déroulant pour l'onglet profil du menu #}
 {% endblock %}
 
 {# Contenu du block navbar #}
 {% block navbar %}
-    {# (Contenu obligatoire) ici doit être ajouter le contenu du menu identique pour tous les écran sauf pour la page de login #}
+    {# (Contenu obligatoire) ici doit être ajouté le contenu du menu identique pour tous les écran sauf pour la page de login #}
 {% endblock %}
 
 {# Contenu du block navbar #}
 {% block main %}
-    {# (Contenu obligatoire) ici doit être ajouter le contenu de l'écran #}
+    {# (Contenu obligatoire) ici doit être ajouté le contenu de l'écran #}
 {% endblock %}
 
 {# Contenu du block javascript #}
 {% block javascript %}
-    {# (Contenu optionnel) ici doit être ajouter seulement des balises <script src=""></script> pour faire appel à des fichiers js spécifiques à la vue #}
+    {# (Contenu optionnel) ici doit être ajouté seulement des balises <script src=""></script> pour faire appel à des fichiers js spécifiques à la vue #}
 {% endblock %}
