--- a/src/EasyRoom/AppBundle/Resources/views/Salle/index.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/index.html.twig
@@ -43,6 +43,47 @@
 {# Contenu du block navbar #}
 {% block main %}
     {# (Contenu obligatoire) ici doit être ajouté le contenu de l'écran #}
+        <section id="salle-section-description" class="valign-wrapper">
+        <div class="valign blue lighten-1 container" id="salle-div-description">
+            <div class="row">
+                <div class="col s12"><h4>Créer une salle</h4></div>
+                <div class="input-field col s2">
+                    <input id="nom-salle" type="text" class="validate">
+                    <label for="nom-salle">Nom de la salle</label>
+                </div>
+                <div class="input-field col s12">
+                    <textarea id="description-salle" class="materialize-textarea"></textarea>
+                    <label for="description-salle">Description</label>
+                </div>
+                <div class="input-field col s12">
+    			<select>
+    				<option id="disposition-salle" value="" disabled selected>Choisir sa disposition par défaut</option>
+     				<option value="1">Disposition Rectangle</option>
+      				<option value="2">Disposition Salle de classe</option>
+      				<option value="3">Disposition Conférence</option>
+      				<option value="4">Disposition Vide</option>
+    			</select>
+    			<form action="#">
+    				<p>
+      					<input type="checkbox" id="disponibilite-salle" />
+      					<label for="disponibilite-salle">Disponibilité</label>
+    				</p>
+    				<p>
+      					<input type="checkbox" id="lumiere-salle" />
+      					<label for="lumiere-salle">Lumière du jour</label>
+    				</p>
+    				<p>
+      					<input type="checkbox" id="handicap-salle" />
+      					<label for="handicap-salle">Accès handicapé</label>
+    				</p>
+    			</form>
+  				</div>
+    			<div class="input-field col s12">
+                	<input type="submit" value="Valider">
+            	</div>
+   		 	</div>
+   		 </div>
+   		 </section>
 {% endblock %}
 
 {# Contenu du block javascript #}
