--- a/src/EasyRoom/AppBundle/Resources/views/Salle/index.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/index.html.twig
@@ -47,7 +47,7 @@
         <div class="valign blue lighten-1 container" id="salle-div-description">
             <div class="row">
                 <div class="col s12"><h4>Créer une salle</h4></div>
-                <div class="input-field col s2">
+                <div class="input-field col s12">
                     <input id="nom-salle" type="text" class="validate">
                     <label for="nom-salle">Nom de la salle</label>
                 </div>
@@ -55,14 +55,24 @@
                     <textarea id="description-salle" class="materialize-textarea"></textarea>
                     <label for="description-salle">Description</label>
                 </div>
-                <div class="input-field col s12">
-    			<select>
-    				<option id="disposition-salle" value="" disabled selected>Choisir sa disposition par défaut</option>
-     				<option value="1">Disposition Rectangle</option>
-      				<option value="2">Disposition Salle de classe</option>
-      				<option value="3">Disposition Conférence</option>
-      				<option value="4">Disposition Vide</option>
-    			</select>
+                <form action="#">
+    				<p>
+      					<input name="disposition" type="radio" id="disposition-rectangle" />
+      					<label for="disposition-rectangle">Disposition Rectangle</label>
+    				</p>
+    				<p>
+      					<input name="disposition" type="radio" id="disposition-salle" />
+      					<label for="disposition-salle">Disposition Salle de classe</label>
+    				</p>
+    				<p>
+      					<input name="disposition" type="radio" id="disposition-conference"  />
+      					<label for="disposition-conference">Disposition Conférence</label>
+    				</p>
+    				<p>
+      					<input name="disposition" type="radio" id="disposition-vide" />
+      					<label for="disposition-vide">Disposition Vide</label>
+    				</p>
+  				</form> 
     			<form action="#">
     				<p>
       					<input type="checkbox" id="disponibilite-salle" />
