--- a/src/EasyRoom/AppBundle/Resources/public/sass/style.scss
+++ b/src/EasyRoom/AppBundle/Resources/public/sass/style.scss
@@ -1,11 +1,10 @@
-$blue-easyroom : rgb(0, 160, 224);
-$white: #fff;
-$soft-black:#4e4e4e;
+@import "_variables.scss";
 
 html {
   color: $soft-black;
 }
 
+/** TOP BAR **/
 nav {
   line-height: normal;
   #logo-container {
@@ -31,69 +30,41 @@ nav {
   .select-wrapper input.select-dropdown {border-bottom:1px solid $white}
 }
 
-div.recherche {
-  background: url(../images/accueil_background_search_salle.png) 50% 70%;
-  background-size: cover;
-  min-height: 300px;
-  h3 {color: $white; font-size: 2em;}
-  form {
-    background-color: rgba( $blue-easyroom, 0.97 )
-  }
-  input.valid {
-    border-bottom: 1px solid $white;
-    box-shadow: 0 1px 0 0 $white
-  }
-
-  input, input:focus:not([readonly]) {
-    color: #fff;
-
-    border-bottom: 1px solid $white
-  }
-
-  .input-field label, input:focus:not([readonly]) + label {
-    color: darken( $blue-easyroom, 20% );
-  }
-
-  .btn, .btn-large {
-    text-decoration: none;
-    color: $blue-easyroom;
-    background-color: $white;
-  }
-
+/** INPUTS **/
+input.valid {
+  border-bottom: 1px solid $blue-easyroom !important;
+  box-shadow: 0 1px 0 0 $blue-easyroom !important;
 }
 
-.resultats {
-  &.container {
-    width:95%;
-    max-width:1500px;
-  }
-  h3 {color: $blue-easyroom; font-size: 2.5em;}
-  .card {
-    position:relative;
-    max-width:500px;
-    h4 {margin-top:0}
-    .card-content {padding:1em; margin-bottom:0}
-    .card-description {
-      position:relative; height:100%;
-      p{color: lighten($soft-black, 30%)}}
-    .bottom {
-      position:absolute; bottom:0;
-      .material-icons {color: $blue-easyroom; position:relative; top:5px;right:5px;}
-    }
-    .card-action a {
-      position:relative;
-      left: 2em;
-      color:$blue-easyroom !important;
-    }
-    //a.link-savoir-plus {position:absolute; left: 1em;color: $blue-easyroom !important}
-    //a.link-reserver {position:relative; left:2em; font-weight: bold}
-  }
+input, input:focus:not([readonly]) {
+  //color: $blue-easyroom;
+  border-bottom: 1px solid $blue-easyroom !important;
+  box-shadow: 0 1px 0 0 $blue-easyroom !important;
 }
 
-.picker__frame {
-  max-width: 355px;
-  width: 355px
+input:focus:not([readonly]) + label {
+  color: $blue-easyroom !important;
 }
 
+.input-field .prefix.active {
+  color: $blue-easyroom;
+}
 
+.material-icons {
+  color: #9e9e9e;
+}
 
+.btn, .btn-large {
+  text-decoration: none;
+  color: $blue-easyroom;
+  background-color: $white;
+}
+
+.btn:hover, .btn-large:hover {
+  background-color: $blue-easyroom;
+  color:$white;
+}
+
+.btn:focus, .btn-large:focus, .btn-floating:focus {
+  background-color: darken($blue-easyroom,10%)
+}
