--- a/src/EasyRoom/AppBundle/Resources/views/Login/index.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Login/index.html.twig
@@ -1,23 +1,54 @@
-{% extends "EasyRoomAppBundle::template_parent.html.twig" %}
+<!DOCTYPE html>
+<!--
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+-->
+<html>
+<head>
+    <title>EasyRoom - Login</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Import Google Icon Font-->
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
 
-{% block main %}
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+    <link type="text/css" rel="stylesheet" href="{{ asset('bundles/easyroomapp/dist/css/style.css') }}"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="{{ asset('bundles/easyroomapp/dist/css/login.css') }}"  media="screen,projection"/>
+</head>
+<body class="valign-wrapper" style="background-image:url({{ asset('bundles/easyroomapp/dist/images/login-bg.jpg') }})">
+<main class="valign">
     <div class="row">
-        <form class="col s12">
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">account_circle</i>
-                    <input id="icon_prefix" type="text" class="validate">
-                    <label for="icon_prefix">Adresse mail</label>
-                </div>
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">lock</i>
-                    <input id="icon_lock" type="password" class="validate">
-                    <label for="icon_lock">Mot de passe</label>
-                </div>
-                <input type="submit" value="SE CONNECTER">
-                <a href="#" class="forgot">mot de passe oublié ?</a>
+        <div id="logo">
+            <img src="{{ asset('bundles/easyroomapp/dist/images/logo-login.png') }}" alt="Logo Easyroom">
+        </div>
+        <form class=" card-panel">
+            <div class="input-field col s12">
+                <i class="material-icons prefix">account_circle</i>
+                <input id="icon_prefix" type="text" class="validate">
+                <label for="icon_prefix">Adresse mail</label>
             </div>
+            <div class="input-field col s12">
+                <i class="material-icons prefix">lock</i>
+                <input id="icon_lock" type="password" class="validate">
+                <label for="icon_lock">Mot de passe</label>
+            </div>
+            <div class="submit col s12 center-align">
+                <button class="btn waves-effect waves-light" type="submit" name="action">Se connecter</button>
+            </div>
+            <p class="right-align">
+                <a href="#" class="forgot">Mot de passe oublié ?</a>
+            </p>
         </form>
     </div>
+</main>
+<!--Import jQuery before materialize.js-->
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<!-- Compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+{% block javascript %}{% endblock %}
+</body>
+</html>
 
-{% endblock %}
