--- a/src/EasyRoom/AppBundle/Resources/views/Login/index.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Login/index.html.twig
@@ -27,7 +27,7 @@ and open the template in the editor.
         <form class=" card-panel">
             <div class="input-field col s12">
                 <i class="material-icons prefix">account_circle</i>
-                <input id="icon_prefix" type="text" class="validate">
+                <input id="icon_prefix" type="email" class="validate">
                 <label for="icon_prefix">Adresse mail</label>
             </div>
             <div class="input-field col s12">
