--- a/src/EasyRoom/AppBundle/Resources/views/template_parent.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/template_parent.html.twig
@@ -28,6 +28,9 @@ and open the template in the editor.
         </main>
 
         <footer>
+            <p class="right-align">
+                © Copyright ECN Team 2017
+            </p>
         </footer>
         <!--Import jQuery before materialize.js-->
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
