--- a/src/EasyRoom/AppBundle/Resources/views/Login/index.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Login/index.html.twig
@@ -44,6 +44,11 @@ and open the template in the editor.
         </form>
     </div>
 </main>
+<footer>
+    <p class="center-align">
+        © Copyright ECN Team 2017
+    </p>
+</footer>
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <!-- Compiled and minified JavaScript -->
