Ajout des liens menus / boutons

--- a/src/EasyRoom/AppBundle/Resources/views/Salle/search_result.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/search_result.html.twig
@@ -30,16 +30,16 @@
             <div class="container">
                 <a id="logo-container" href="#" class="brand-logo"><img src="{{ asset('bundles/easyroomapp/dist/images/logo-menu.png') }}" alt="Logo Easyroom"></a>
                 <ul class="right hide-on-med-and-down">
-                    <li class="active"><a href="{{ path('easy_room_app_accueil_index') }}">Accueil</a></li>
-                    <li><a href="{{ path('easy_room_app_salle_index') }}">Salles</a></li>
+                    <li><a href="{{ path('easy_room_app_accueil_index') }}">Accueil</a></li>
+                    <li class="active"><a href="{{ path('easy_room_app_salle_index') }}">Salles</a></li>
                     <li><a href="#">Mes réservations</a></li>
                     <!-- Dropdown Trigger -->
                     <li><a class="dropdown-button" href="#!" data-activates="dropdown1"><i class="material-icons">person_pin</i></a></li>
                 </ul>
 
                 <ul id="nav-mobile" class="side-nav">
-                    <li class="active"><a href="{{ path('easy_room_app_accueil_index') }}">Accueil</a></li>
-                    <li><a href="{{ path('easy_room_app_salle_index') }}">Salles</a></li>
+                    <li><a href="{{ path('easy_room_app_accueil_index') }}">Accueil</a></li>
+                    <li class="active"><a href="{{ path('easy_room_app_salle_index') }}">Salles</a></li>
                     <li><a href="#">Mes réservations</a></li>
                     <li><a href="#!">Mon profil</a></li>
                     <li class="divider"></li>
