--- a/src/EasyRoom/AppBundle/Resources/views/Login/index.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Login/index.html.twig
@@ -24,15 +24,15 @@ and open the template in the editor.
         <div id="logo">
             <img src="{{ asset('bundles/easyroomapp/dist/images/logo-login.png') }}" alt="Logo Easyroom">
         </div>
-        <form class=" card-panel">
+        <form class="card-panel" action="{{ path('easy_room_app_login_authentification') }}">
             <div class="input-field col s12">
                 <i class="material-icons prefix">account_circle</i>
-                <input id="icon_prefix" type="email" class="validate">
+                <input id="icon_prefix" type="email" class="validate" required>
                 <label for="icon_prefix">Adresse mail</label>
             </div>
             <div class="input-field col s12">
                 <i class="material-icons prefix">lock</i>
-                <input id="icon_lock" type="password" class="validate">
+                <input id="icon_lock" type="password" class="validate" required>
                 <label for="icon_lock">Mot de passe</label>
             </div>
             <div class="submit col s12 center-align">
