--- a/src/EasyRoom/AppBundle/Resources/views/Reservation/form_recherche.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Reservation/form_recherche.html.twig
@@ -1,4 +1,4 @@
-<form class="col s12" style="padding: 0.1rem 2.75rem">
+<form class="col s12" style="padding: 0.1rem 2.75rem" action="{{ path('easy_room_app_salle_search') }}">
   <div class="row">
     <h3>Réservez une salle</h3>
     <div class="input-field col m2">
