--- a/src/EasyRoom/AppBundle/Resources/views/Salle/search_salle.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/Salle/search_salle.html.twig
@@ -2,20 +2,7 @@
 
 {# Contenu du block stylesheets #}
 {% block stylesheets %}
-    <link type="text/css" rel="stylesheet" href="{{ asset('bundles/easyroomapp/dist/css/accueil.css') }}"/>
-{% endblock %}
-
-{# Contenu du block navbar_profil #}
-{% block navbar_profil %}
-    <ul id="dropdown1" class="dropdown-content">
-        <li>
-            <a href="#!" class="blue-text text-lighten-1">Mon compte</a>
-        </li>
-        <li class="divider blue-text text-lighten-1"></li>
-        <li>
-            <a href="#!" class="blue-text text-lighten-1">Déconnexion</a>
-        </li>
-    </ul>
+    <link type="text/css" rel="stylesheet" href="{{ asset('bundles/easyroomapp/dist/css/search_salle.css') }}"/>
 {% endblock %}
 
 {# Contenu du block navbar #}
@@ -43,7 +30,7 @@
                     <li><a href="#">Mes réservations</a></li>
                     <li><a href="#!">Mon profil</a></li>
                     <li class="divider"></li>
-                    <li><a href="#!">Se déconnecter</a></li>
+                    <li><a href="{{ path('easy_room_app_login_index') }}">Se déconnecter</a></li>
                 </ul>
                 <a href="#" data-activates="nav-mobile" class="blue-text button-collapse"><i class="material-icons">menu</i></a>
             </div>
@@ -59,17 +46,10 @@
         </div>
     </section>
 
-    <section class="section row mes-reservations">
+    <section class="section row resultats-recherche">
         <div class="container">
-            <h3 class="col s12 header">Mes réservations</h3>
-            {% include 'EasyRoomAppBundle:Reservation:carte_ma_reservation.html.twig' %}
-        </div>
-    </section>
-
-    <section class="section row join-meeting">
-        <div class="container">
-            <h3 class="col s12 header">Vous avez été invité à rejoindre les réunions suivantes :</h3>
-            {% include 'EasyRoomAppBundle:Reservation:carte_invitation.html.twig' %}
+            <h3 class="col s12 header center-align">Résultat de votre recherche</h3>
+            {% include 'EasyRoomAppBundle:Salle:carte_resultat.html.twig' %}
         </div>
     </section>
 {% endblock %}
