--- a/src/EasyRoom/AppBundle/Resources/public/sass/style.scss
+++ b/src/EasyRoom/AppBundle/Resources/public/sass/style.scss
@@ -2,6 +2,10 @@
 
 html {
   color: $soft-black;
+  height: 100%;
+}
+body {
+  min-height: 100%;
 }
 
 /** TOP BAR **/
@@ -29,6 +33,8 @@ nav {
   .dropdown-content {min-width:150px; top:45px!important}
   .select-wrapper input.select-dropdown {border-bottom:1px solid $white}
 }
+
+.dropdown-content li>a, .dropdown-content li>span {color:$blue-easyroom}
 
 /** FOOTER **/
 footer {color: $blue-easyroom;margin-right:0.8em}
@@ -70,3 +76,5 @@ input[type=email], input[type=password], input[type=text] {
 .btn:focus, .btn-large:focus, .btn-floating:focus {
   background-color: darken($blue-easyroom,10%)
 }
+
+#sidenav-overlay {z-index:0}
