--- a/src/EasyRoom/AppBundle/Resources/views/template_parent.html.twig
+++ b/src/EasyRoom/AppBundle/Resources/views/template_parent.html.twig
@@ -23,8 +23,7 @@ and open the template in the editor.
             {% block navbar %}{% endblock %}
         </header>
         <main>
-          {% block main %}
-          {% endblock %}
+          {% block main %}{% endblock %}
         </main>
 
         <footer>
